--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,4 +52,15 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+
+    <!-- math formulation by-AIAH -->
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?..."></script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+          inlineMath: [['$','$']]
+        }
+      });
+    </script>
 </head>
