--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -99,10 +99,18 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.side-catalog .catalog-body .h1_nav,
-.side-catalog .catalog-body .h2_nav,
-.side-catalog .catalog-body .h3_nav {
+.side-catalog .catalog-body .h1_nav {
   margin-left: 0;
+  font-size: 13px;
+  font-weight: bold;
+}
+.side-catalog .catalog-body .h2_nav {
+  margin-left: 3px;
+  font-size: 13px;
+  font-weight: bold;
+}
+.side-catalog .catalog-body .h3_nav {
+  margin-left: 6px;
   font-size: 13px;
   font-weight: bold;
 }
