--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -104,7 +104,7 @@ layout: default
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
                             <a href="{{ site.baseurl }}/about">
-                                <img style="display: block; margin: 0 auto" src="{{site.sidebar-avatar}}"/>
+                                <img style="margin: 0 auto" src="{{site.sidebar-avatar}}"/>
                             </a>
                         {% endif %}
                         {% if site.sidebar-about-description %}
