--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -108,7 +108,7 @@ layout: default
                             </a>
                         {% endif %}
                         {% if site.sidebar-about-description %}
-                            <p>{{site.sidebar-about-description}}</p>
+                            <div>{{site.sidebar-about-description}}</div>
                         {% endif %}
                         <!-- SNS Link -->
                         <ul class="list-inline">
@@ -186,7 +186,7 @@ layout: default
                             
                         </ul>
                         {% if site.email %}
-                            <p>✉️ {{site.email}}</p>
+                            <div>✉️ {{site.email}}</div>
                         {% endif %}
                     </div>
                 </section>
